# roux

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  PRD.md  README.md  STYLE_GUIDE.md  db.py  enrichment.py  import_takeout.py  migrate_to_supabase.py  personal_auth.py  pyproject.toml  reenrich.py  seed_sources.py  server.py
migrations/: 001_expert_db.sql  002_multi_tenant.sql  003_pipeline_version.sql  004_cleanup_orphan_expert_places.sql  005_rename_expert_places_to_places.sql  006_guide_places_column.sql
seed-data/: places.json  taste-profile.md
