[project]
name = "roux"
version = "0.1.0"
description = "Your personal dining concierge. Makes Google Maps saved places actually useful through Claude."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "supabase>=2.10.0",
    "trafilatura>=2.0.0",
    "anthropic>=0.49.0",
]
